<resources>
    <string name="no_data">No Data</string>
    <string name="search_by_name">Search by name</string>
    <string name="search_error">there is no such recipe name</string>
    <string name="recipe_details_preview">this is the recipes details, some text to test the appearance of
        the view It\'s time for a truly uncompromising smartphone. One that was designed and
        manufactured by technical enthusiasts - in close coordination with the future users. A
        smartphone that perfectly combines fascinating technology, groundbreaking design and
        breakthrough innovation. It is time for the OnePlus 3. But do not rely on our word. Convince
        yourself.
    </string>
    <string name="recipe_title_preview">this is the recipe name</string>
    <string name="recipe">Recipes</string>
    <string name="no_internet">Please check your internet connection</string>
    <string name="network_error">Network error, could get data,please try again!</string>
    <string name="refresh">refresh</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_recipes">Recipes</string>
    <string name="title_activity_recipe_details">Recipe Details</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >4 characters</string>
    <string name="invalid_username_and_password">please check your username and password</string>
    <string name="add_to_favorite">Add to favorite</string>
    <string name="test_password">ahmed</string>
    <string name="test_email">ahmed@ahmed.ahmed</string>
    <string name="title_activity_recipes_list">RecipesListActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>


    <string name="facebook_app_id">2144330185889347</string>
    <string name="fb_login_protocol_scheme">fb2144330185889347</string>
    <string name="facebook_client_token">c09592bfd2379fa86504d0018e8a5546</string>
    <string name="pay_jp_token">pk_test_bbb70eddc6104f8407d37863</string>
    <!--    <string name="pay_jp_token">pk_live_f0fd356ec086396d805996ee</string>-->

    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Bottom Naviagtion -->
    <string name="title_home">ホーム</string>
    <string name="title_lesson_creation">レッスン作成</string>
    <string name="title_my_schedule">マイスケジュール</string>
    <string name="title_reservation_pay">予約状況</string>
    <string name="title_lesson_search">レッスン検索</string>

    <!-- Login -->
    <string name="login_with_facebook">Facebookでログイン</string>
    <string name="mail_address">メールアドレス</string>
    <string name="password">パスワード</string>
    <string name="login">ログイン</string>
    <string name="register">新規登録</string>
    <string name="email_not_valid">メールアドレスの形式が正しくありません。</string>
    <string name="request_forgot_pass">パスワードをお忘れの方</string>
    <string name="error_login_duplicate_email">既に使われているメールアドレスのためログインできません。</string>
    <string name="error_login_fail">メールアドレスまたはパスワードが間違っています</string>

    <!-- Register -->
    <string name="first_name">姓</string>
    <string name="last_name">名</string>
    <string name="nickname">ニックネーム</string>
    <string name="email">メールアドレス</string>
    <string name="re_password">パスワード確認</string>
    <string name="accept_register">利用規約に同意して新規登録</string>
    <string name="term_of_use">利用規約</string>
    <string name="error_register_password_length">パスワードは8文字以上のみ登録可能です。</string>
    <string name="error_register_password_empty">パスワードを入力してください。</string>
    <string name="error_register_repassword">確認用パスワードが一致していません。</string>
    <string name="error_register_email">メールアドレスの形式が正しくありません。</string>
    <string name="error_register_duplicate_email">このメールアドレスは既に登録されています</string>
    <string name="error_register_duplicate_nickname">このニックネームは既に使用されています。</string>

    <!-- ForgotPass -->
    <string name="forgot_password">パスワード再発行</string>

    <string name="see_more">さらに見る</string>

    <!-- Lesson Creation -->
    <string name="view" />
    <string name="summary_tag" />
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>