<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/page_1"
        android:enabled="true"
        android:icon="@drawable/home"
        android:title="@string/title_home"/>

    <item
        android:id="@+id/page_2"
        android:enabled="true"
        android:icon="@drawable/lesson_creation"
        android:title="@string/title_lesson_creation"/>

    <item
        android:id="@+id/page_3"
        android:enabled="true"
        android:icon="@drawable/my_schedule"
        android:title="@string/title_my_schedule"/>

    <item
        android:id="@+id/page_4"
        android:enabled="true"
        android:icon="@drawable/reservation_pay"
        android:title="@string/title_reservation_pay"/>

    <item
        android:id="@+id/page_5"
        android:enabled="true"
        android:icon="@drawable/search"
        android:title="@string/title_lesson_search"/>
</menu>