<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_main_bottom"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_45sdp"
    android:background="#F5F5F5"
    android:baselineAligned="false"
    android:gravity="center_vertical"
    android:orientation="horizontal">

    <LinearLayout
        android:id="@+id/ll_main_home"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_main_home"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:background="@drawable/home" />

        <TextView
            android:id="@+id/tv_main_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_2sdp"
            android:text="@string/title_home"
            android:textColor="@color/black"
            android:textSize="@dimen/_7ssp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_main_lesson_creation"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_main_lesson_creation"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:background="@drawable/lesson_creation" />

        <TextView
            android:id="@+id/tv_main_lesson_creation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_2sdp"
            android:text="@string/title_lesson_creation"
            android:textColor="@color/black"
            android:textSize="@dimen/_7ssp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_main_my_schedule"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1.1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_main_my_schedule"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:background="@drawable/my_schedule" />

        <TextView
            android:id="@+id/tv_main_my_schedule"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_2sdp"
            android:text="@string/title_my_schedule"
            android:textColor="@color/black"
            android:textSize="@dimen/_7ssp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_main_reservation_pay"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_main_reservation_pay"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:background="@drawable/reservation_pay" />

        <TextView
            android:id="@+id/tv_main_reservation_pay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_2sdp"
            android:text="@string/title_reservation_pay"
            android:textColor="@color/black"
            android:textSize="@dimen/_7ssp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_main_search"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_main_search"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:background="@drawable/search" />

        <TextView
            android:id="@+id/tv_main_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_2sdp"
            android:text="@string/title_lesson_search"
            android:textColor="@color/black"
            android:textSize="@dimen/_7ssp" />
    </LinearLayout>
</LinearLayout>